--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
     "json-server": "^0.17.4",
     "register-service-worker": "^1.7.2",
